# seedbraid

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLANS.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  doc-writer.md  planner.md  researcher.md  security-scanner.md  test-writer.md
.claude/commands/: catchup.md  create-pr-with-merge.md  create-pr.md  create-ticket.md  investigate.md  memorize.md  phase-clear.md  plan2doc.md  release.md  review-diff.md  security-scan.md
.claude/hooks/: post-edit-lint.sh  post-edit-syntax-check.sh  pre-bash-safety.sh  pre-compact-save.sh  pre-write-security-check.sh  session-start.sh  session-stop-log.sh
.claude/rules/: security.md  testing.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-seed.yml  release.yml
docs/: DESIGN.md  ECOSYSTEM_TICKETS.md  ERROR_CODES.md  FORMAT.md  OSS_RELEASE_CHECKLIST.md  RISK_MITIGATION_PLAN.md  THREAT_MODEL.md  TURN_EXECUTION_PLAN.md  index.md
docs/api/: chunk_manifest.md  chunking.md  cid.md  cli.md  codec.md  container.md  diagnostics.md  errors.md  hybrid_storage.md  index.md  ipfs.md  ipfs_chunks.md  mlhooks.md  oci.md  perf.md  pinning.md  storage.md
docs/plans/: T-003_plan.md  T-015-plan.md  T-016_codeowners.md  T-020_test_coverage_80.md  pep8-scripts-tests-cleanup.md
docs/research/: T-003_investigation.md  T-015-investigation.md  T-016_codeowners_investigation.md  T-020_investigation.md  T-020_status_summary.md  ci-lint-failure-investigation.md  cli_coverage_analysis.md  diagnostics_coverage_gaps.md  perf_coverage_analysis.md  test_infrastructure.md
docs/reviews/: T-003_context_manager_efficiency.md  T-003_context_manager_reuse.md  T-006_code_reuse.md  T-006_next_action.md
examples/dvc/: .gitignore  README.md  dvc.yaml
examples/ml/: README.md
examples/oci/: README.md
scripts/: bench_gate.py  bench_shifted_dedup.py  gen_compat_fixtures.py  ml_hooks.py  oras_seed.py
src/helix/: __init__.py  chunking.py  cli.py  codec.py  container.py  diagnostics.py  ipfs.py  mlhooks.py  oci.py  perf.py  pinning.py  storage.py
src/seedbraid/: __init__.py  __main__.py  chunk_manifest.py  cid.py  (+14 more)
tests/: test_chunk_manifest.py  test_chunking.py  test_cid.py  test_cli_commands.py  test_compat_fixtures.py  test_container.py  test_doctor.py  test_dvc_bridge.py  test_encryption.py  test_genes_pack.py  test_genome_snapshot.py  test_hybrid_storage.py  test_ipfs_chunks.py  test_ipfs_chunks_integration.py  test_ipfs_fetch_validation.py  test_ipfs_http.py  test_ipfs_optional.py  test_ipfs_reliability.py  test_keygen_cli.py  test_manifest_private.py  test_ml_hooks.py  test_oci_oras_bridge.py  test_perf.py  test_perf_gates.py  test_prime_verify.py  test_publish_warning.py  test_release_workflow.py  test_remote_pinning.py  test_roundtrip.py  test_signature.py  test_verify_strict.py
(+41 files in other folders)
