[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helix"
dynamic = ["version"]
description = "Helix reference-based reconstruction with CDC and IPFS seed transport"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12",
]

[project.optional-dependencies]
zstd = ["zstandard>=0.23"]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
helix = "helix.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "helix.__version__"}

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008", "B904"]
