[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seedbraid"
dynamic = ["version"]
description = "Reference-based file reconstruction with CDC chunking, SBD1 binary seed format, and IPFS transport"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
  {name = "aimsise"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Archiving",
  "Typing :: Typed",
]
keywords = [
  "cdc", "chunking", "deduplication", "ipfs",
  "binary-format", "file-reconstruction", "seed",
]
dependencies = [
  "typer>=0.12",
]

[project.optional-dependencies]
zstd = ["zstandard>=0.23"]
crypto = ["cryptography>=43.0"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "cryptography>=43.0",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
]

[project.scripts]
seedbraid = "seedbraid.cli:app"

[project.urls]
Homepage = "https://github.com/aimsise/seedbraid"
Repository = "https://github.com/aimsise/seedbraid"
Documentation = "https://github.com/aimsise/seedbraid#readme"
Issues = "https://github.com/aimsise/seedbraid/issues"
Changelog = "https://github.com/aimsise/seedbraid/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "seedbraid.__version__"}

[tool.pytest.ini_options]
addopts = "-q --cov=seedbraid --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008", "B904"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
exclude = ["tests/", "scripts/", "examples/"]
